fist and last name separate

--- a/app/views/employees/_form.html.slim
+++ b/app/views/employees/_form.html.slim
@@ -10,8 +10,11 @@
     = f.label :number
     = f.number_field :number
   .field
-    = f.label :name
-    = f.text_field :name
+    = f.label :firstname
+    = f.text_field :firstname
+  .field
+    = f.label :lastname
+    = f.text_field :lastname
   .field
     = f.label :regime
     = f.text_field :regime
