--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -13,7 +13,7 @@ table
         td = employee.number
         td = employee.name
         td
-          => link_to I18n.l(Time.now.month, format: :month), blank_time_sheet_employee_path(employee, month: (Time.now-1.month).month)
+          => link_to I18n.l(Time.now+0.month, format: :month), blank_time_sheet_employee_path(employee, month: (Time.now-1.month).month)
           => link_to I18n.l(Time.now+1.month, format: :month), blank_time_sheet_employee_path(employee, month: (Time.now).month)
           => link_to I18n.l(Time.now+2.month, format: :month), blank_time_sheet_employee_path(employee, month: (Time.now+1.month).month)
         td
